add coupons system update swagger
